cros: Allow pin keyboard to keep focus without popping up the pin keyboard.

We want each button click to transfer focus back to the pin keyboard, but this not work well with virtual keyboard. Previously kept focus on the buttons, but added key events to each button so they users can still use the keyboard after pressing a keyboard. This CL tries another method by preventing the virtual keyboard from popping up on button clicks. Since I was working on the PIN, I changed the input back to type text which fixes the bug with the caret jumping around when non-numerical input is entered.

BUG=653297, 653642, 661334
TEST=none
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:closure_compilation

Review-Url: https://codereview.chromium.org/2444443002
Cr-Commit-Position: refs/heads/master@{#431769}

Former-commit-id: 344b6d2380dbbf312a4725c308eb0cd4d0627177